--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <div id="modal-root"></div>
     <script src="index.js"></script>
   </body>
 </html>
